update problem statement

--- a/paper/Gaponov2022InterpretableRNN.tex
+++ b/paper/Gaponov2022InterpretableRNN.tex
@@ -53,6 +53,11 @@
 
 Проведён вычислительный эксперимент для анализа производительности метода, а также для проверки интерпретаций на точность и согласованность. 
 
+\section{Постановка задачи}
+Рассмотрим рекуррентную нейронную сеть $\mathcal{N}$. Входные данные обозначим через $x \in \mathcal{X}$, где $\mathcal{X} \subset \mathbb{R}^d~-$ пространство признаков. Предсказание модели $\mathcal{N}$ обозначим через $y \in \mathcal{Y}$, где $\mathcal{Y}~-$ пространство предсказаний.
+
+Модель $\mathcal{N}$ представляет из себя функцию классификации $F: \mathcal{X} \to \mathcal{Y}$. Из-за сложной структуры сети трудно понять поведение функции $F$, поэтому необходимо получить 
+
 %\bibliographystyle{plain}
 %\bibliography{Gaponov2022InterpretableCNN}
 
