update abstract, introduction, problem statement

--- a/paper/Gaponov2022InterpretableRNN.bib
+++ b/paper/Gaponov2022InterpretableRNN.bib
@@ -15,3 +15,83 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@misc{lipton2015critical,
+      title={A Critical Review of Recurrent Neural Networks for Sequence Learning}, 
+      author={Zachary C. Lipton and John Berkowitz and Charles Elkan},
+      year={2015},
+      eprint={1506.00019},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{sherstinsky2020fundrnn,
+   title={Fundamentals of Recurrent Neural Network (RNN) and Long Short-Term Memory (LSTM) network},
+   volume={404},
+   ISSN={0167-2789},
+   url={http://dx.doi.org/10.1016/j.physd.2019.132306},
+   DOI={10.1016/j.physd.2019.132306},
+   journal={Physica D: Nonlinear Phenomena},
+   publisher={Elsevier BV},
+   author={Sherstinsky, Alex},
+   year={2020},
+   month={Mar},
+   pages={132306}
+}
+
+@misc{dosovitskiy2016inverting,
+      title={Inverting Visual Representations with Convolutional Networks}, 
+      author={Alexey Dosovitskiy and Thomas Brox},
+      year={2016},
+      eprint={1506.02753},
+      archivePrefix={arXiv},
+      primaryClass={cs.NE}
+}
+
+@misc{zhou2018interpreting,
+      title={Interpreting Deep Visual Representations via Network Dissection}, 
+      author={Bolei Zhou and David Bau and Aude Oliva and Antonio Torralba},
+      year={2018},
+      eprint={1711.05611},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@inproceedings{NIPS2014_ea8fcd92,
+ author = {Ba, Jimmy and Caruana, Rich},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. Lawrence and K. Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Do Deep Nets Really Need to be Deep?},
+ url = {https://proceedings.neurips.cc/paper/2014/file/ea8fcd92d59581717e06eb187f10666d-Paper.pdf},
+ volume = {27},
+ year = {2014}
+}
+
+@misc{bastani2019interpreting,
+      title={Interpreting Blackbox Models via Model Extraction}, 
+      author={Osbert Bastani and Carolyn Kim and Hamsa Bastani},
+      year={2019},
+      eprint={1705.08504},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{zhou2015learning,
+      title={Learning Deep Features for Discriminative Localization}, 
+      author={Bolei Zhou and Aditya Khosla and Agata Lapedriza and Aude Oliva and Antonio Torralba},
+      year={2015},
+      eprint={1512.04150},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{simonyan2014deep,
+      title={Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps}, 
+      author={Karen Simonyan and Andrea Vedaldi and Andrew Zisserman},
+      year={2014},
+      eprint={1312.6034},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
