update problem statement

--- a/paper/Gaponov2022InterpretableRNN.tex
+++ b/paper/Gaponov2022InterpretableRNN.tex
@@ -26,7 +26,7 @@
 	\texttt{gaponov.me@phystech.edu} \\
 	\And
 	Бахтеев Олег \\
-	\texttt{...} \\
+	\texttt{bakhteev@phystech.edu} \\
 	\And
 	Яковлев Константин \\
 	\texttt{...} \\
@@ -65,9 +65,11 @@
 
 Модель $\mathcal{N}$ представляет из себя функцию классификации $F: \mathcal{X} \to \mathcal{Y}$. Из-за сложной структуры сети трудно понять поведение функции $F$, поэтому необходимо получить интерпретацию, которую способен понять человек.
 
-Предлагается рассмотреть модель $\mathcal{M}$, представляющую из себя множество линейных классификаторов $\left\{F_1, F_2, \dots, F_h, \dots\right\}$. Пространство признаков $\mathcal{X}$ разбивается на конечное множество выпуклых многогранников $\left\{P_1, P_2, \dots, P_h, \dots\right\}$. То есть $\bigsqcup_{h} P_h=\mathcal{X}$. Классификатор $F_h$ определён на многограннике $P_h$. Модель $\mathcal{M}$ должна быть математически эквивалентна модели $\mathcal{N}$, то есть множество функций $\left\{F_1, F_2, \dots, F_h, \dots\right\}$ определённых на $\left\{P_1, P_2, \dots, P_h, \dots\right\}$ тождественно равно функции $F$, определённой на $\mathcal{X}$.
+Функция $F$ является кусочно-линейной, так как $\mathcal{N}~-$ рекуррентная нейронная сеть с кусочно-линейными функциями активации. Области, на которых функция $F$ линейна являются выпуклыми многогранниками.
 
-Модель $\mathcal{M}$ обладает свойством точности, так как математически эквивалентна модели $\mathcal{N}$. То есть поведение двух моделей эквивалентно. Модель $\mathcal{M}$ также обладает свойством согласованности, так как близкие объекты попадают в один и тот же выпуклый многогранник $P_h$, а значит, классифицируются одним и тем же классификатором $F_h$.
+Предлагается рассмотреть модель $\mathcal{M}$, представляющую из себя множество линейных классификаторов $\left\{F_1, F_2, \dots, F_h, \dots\right\}$. Пространство признаков $\mathcal{X}$ разбивается на конечное множество выпуклых многогранников $\left\{P_1, P_2, \dots, P_h, \dots\right\}$. То есть $\bigsqcup\limits_{h} P_h=\mathcal{X}$. Классификатор $F_h$ определён на многограннике $P_h$. Модель $\mathcal{M}$ должна быть математически эквивалентна модели $\mathcal{N}$, то есть множество функций $\left\{F_1, F_2, \dots, F_h, \dots\right\}$ определённых на $\left\{P_1, P_2, \dots, P_h, \dots\right\}$ тождественно равно функции $F$, определённой на $\mathcal{X}$.
+
+Модель $\mathcal{M}$ обладает свойством точности, так как математически эквивалентна модели $\mathcal{N}$. То есть поведение двух моделей совпадает. $F|_{P_h} \equiv F_h$. Модель $\mathcal{M}$ также обладает свойством согласованности, так как близкие объекты попадают в один и тот же выпуклый многогранник $P_h$, а значит, классифицируются одним и тем же линейным классификатором $F_h$.
 
 Задача состоит в поиске такой модели $\mathcal{M}$, построении множества классификаторов по произвольной рекуррентной нейронной сети $\mathcal{N}$.
 
