Updates from Overleaf

--- a/paper/Gaponov2022InterpretableRNN.bib
+++ b/paper/Gaponov2022InterpretableRNN.bib
@@ -95,3 +95,29 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+
+@InProceedings{maas-EtAl:2011:ACL-HLT2011,
+  author    = {Maas, Andrew L.  and  Daly, Raymond E.  and  Pham, Peter T.  and  Huang, Dan  and  Ng, Andrew Y.  and  Potts, Christopher},
+  title     = {Learning Word Vectors for Sentiment Analysis},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {June},
+  year      = {2011},
+  address   = {Portland, Oregon, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {142--150},
+  url       = {http://www.aclweb.org/anthology/P11-1015}
+}
+
+@article{onehot2018,
+   title={Beyond one-hot encoding: Lower dimensional target embedding},
+   volume={75},
+   ISSN={0262-8856},
+   url={http://dx.doi.org/10.1016/j.imavis.2018.04.004},
+   DOI={10.1016/j.imavis.2018.04.004},
+   journal={Image and Vision Computing},
+   publisher={Elsevier BV},
+   author={Rodríguez, Pau and Bautista, Miguel A. and Gonzàlez, Jordi and Escalera, Sergio},
+   year={2018},
+   month={Jul},
+   pages={21–31}
+}
