--- a/paper/arxiv.sty
+++ b/paper/arxiv.sty
@@ -48,7 +48,8 @@
 
 % font sizes with reduced leading
 \renewcommand{\normalsize}{%
-  \@setfontsize\normalsize\@xipt\@xiipt
+%   \@setfontsize\normalsize\@xipt\@xiipt
+  \@setfontsize\normalsize\@xpt\@xipt
   \abovedisplayskip      7\p@ \@plus 2\p@ \@minus 5\p@
   \abovedisplayshortskip \z@ \@plus 3\p@
   \belowdisplayskip      \abovedisplayskip
