convert svg to eps

--- a/code/experiment.ipynb
+++ b/code/experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a4a4d3f",
+   "id": "c7555015",
    "metadata": {},
    "source": [
     "Подключим необходимые библиотеки"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b5db040",
+   "id": "c49df2bf",
    "metadata": {},
    "source": [
     "Установим фиксированный `random seed` для повторяемости эксперимента"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88dc07b",
+   "id": "9d22d8c1",
    "metadata": {},
    "source": [
     "Загрузим данные. Разобъём на `train`, `valid`, `test`"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "34081c60",
+   "id": "65c9a46c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T18:47:40.518661Z",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f58bc532",
+   "id": "76d35833",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T18:48:06.853570Z",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d0f4666",
+   "id": "05ae4d43",
    "metadata": {},
    "source": [
     "Построим словарь по предподсчитанным векторам"
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a5307a",
+   "id": "0314902c",
    "metadata": {},
    "source": [
     "Опишем модель $-$ базовая `RNN`"
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45beec92",
+   "id": "8b1ba121",
    "metadata": {},
    "source": [
     "Обучим модель на тренировочной выборке"
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "e75a32c1",
+   "id": "387ad6ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:28:54.250783Z",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab113204",
+   "id": "9e734db2",
    "metadata": {},
    "source": [
     "Теперь получим интерпретируемую модель методом **LIME**"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "f027ff0f",
+   "id": "a1024f6b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:28:54.297782Z",
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "681356e9",
+   "id": "51bc85a7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:28:57.681811Z",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "733b33fd",
+   "id": "4519502b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:28:57.728810Z",
@@ -37749,7 +37749,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "8e989e6b",
+   "id": "95805267",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:48:22.644130Z",
@@ -37768,7 +37768,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "13d443b1",
+   "id": "9b50a4ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:48:23.642287Z",
@@ -37783,7 +37783,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "06f2670e",
+   "id": "3c7430ae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:57:10.809258Z",
@@ -37810,7 +37810,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "c1dd923b",
+   "id": "b83b5710",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:41:42.507778Z",
@@ -37831,12 +37831,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "id": "bb02a64c",
+   "execution_count": 335,
+   "id": "cebcf60a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-15T20:02:28.263481Z",
-     "start_time": "2022-03-15T20:02:28.129482Z"
+     "end_time": "2022-03-15T20:32:06.267613Z",
+     "start_time": "2022-03-15T20:32:06.105615Z"
     }
    },
    "outputs": [
@@ -37854,19 +37854,20 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 8))\n",
+    "fig = plt.figure(figsize=(10, 8))\n",
     "plt.plot(np.sort(lime_preds[:, 1])[::-1], label='LIME')\n",
     "plt.xlabel('Индекс объекта')\n",
     "plt.ylabel('Предсказание вероятности')\n",
     "plt.legend(loc=3)\n",
-    "plt.savefig('../figures/lime_proba.svg', format='svg')\n",
+    "fig.axes[0].set_rasterized(True)\n",
+    "plt.savefig('../figures/lime_proba.eps', format='eps')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "466f4565",
+   "id": "492aeee1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T19:57:20.165224Z",
@@ -37887,12 +37888,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "id": "953e33d2",
+   "execution_count": 333,
+   "id": "1efa7372",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-15T20:02:24.670608Z",
-     "start_time": "2022-03-15T20:02:24.550609Z"
+     "end_time": "2022-03-15T20:31:47.742979Z",
+     "start_time": "2022-03-15T20:31:47.608984Z"
     }
    },
    "outputs": [
@@ -37910,12 +37911,13 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 8))\n",
+    "fig = plt.figure(figsize=(10, 8))\n",
     "plt.plot(np.sort(cos_sims)[::-1], label='LIME')\n",
     "plt.xlabel('Индекс объекта')\n",
     "plt.ylabel('Косинусное расстояние')\n",
     "plt.legend(loc=3)\n",
-    "plt.savefig('../figures/lime_cosine.svg', format='svg')\n",
+    "fig.axes[0].set_rasterized(True)\n",
+    "plt.savefig('../figures/lime_cosine.eps', format='eps')\n",
     "plt.show()"
    ]
   }
