Updates from Overleaf

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -30,10 +30,10 @@
 %----------------------------------------------------------------------------------------------------------
 \begin{document}
 %----------------------------------------------------------------------------------------------------------
-\begin{frame}
-\thispagestyle{empty}
-\maketitle
-\end{frame}
+% \begin{frame}
+% \thispagestyle{empty}
+% \maketitle
+% \end{frame}
 %-----------------------------------------------------------------------------------------------------
 
 %-----------------------------------------------------------------------------------------------------
@@ -83,7 +83,7 @@
 % \draw[red,->] (2) to  [out=-30, in=30, looseness=1.] (6);
 % \draw[red,->] (3) to  [out=-30, in=30, looseness=1.]node[right]{$-\delta^3$}(7);
 % \end{tikzpicture} 
-\includegraphics[width=7cm]{../figures/дшьу_}
+\includegraphics[width=7cm]{../figures/lime_proba.svg}
 \end{columns}
 \end{frame}
 
